markdown/boot/4.0.8/_index.md
# boot 4.0.8

239 pages, converted from upstream Spring AsciiDoc.

- [appendix/application-properties/index](./appendix/application-properties/index.md)
- [appendix/auto-configuration-classes/index](./appendix/auto-configuration-classes/index.md)
- [appendix/auto-configuration-classes/spring-boot-activemq](./appendix/auto-configuration-classes/spring-boot-activemq.md)
- [appendix/auto-configuration-classes/spring-boot-actuator-autoconfigure](./appendix/auto-configuration-classes/spring-boot-actuator-autoconfigure.md)
- [appendix/auto-configuration-classes/spring-boot-amqp](./appendix/auto-configuration-classes/spring-boot-amqp.md)
- [appendix/auto-configuration-classes/spring-boot-artemis](./appendix/auto-configuration-classes/spring-boot-artemis.md)
- [appendix/auto-configuration-classes/spring-boot-autoconfigure](./appendix/auto-configuration-classes/spring-boot-autoconfigure.md)
- [appendix/auto-configuration-classes/spring-boot-batch-jdbc](./appendix/auto-configuration-classes/spring-boot-batch-jdbc.md)
- [appendix/auto-configuration-classes/spring-boot-batch](./appendix/auto-configuration-classes/spring-boot-batch.md)
- [appendix/auto-configuration-classes/spring-boot-cache](./appendix/auto-configuration-classes/spring-boot-cache.md)
- [appendix/auto-configuration-classes/spring-boot-cassandra](./appendix/auto-configuration-classes/spring-boot-cassandra.md)
- [appendix/auto-configuration-classes/spring-boot-cloudfoundry](./appendix/auto-configuration-classes/spring-boot-cloudfoundry.md)
- [appendix/auto-configuration-classes/spring-boot-couchbase](./appendix/auto-configuration-classes/spring-boot-couchbase.md)
- [appendix/auto-configuration-classes/spring-boot-data-cassandra](./appendix/auto-configuration-classes/spring-boot-data-cassandra.md)
- [appendix/auto-configuration-classes/spring-boot-data-commons](./appendix/auto-configuration-classes/spring-boot-data-commons.md)
- [appendix/auto-configuration-classes/spring-boot-data-couchbase](./appendix/auto-configuration-classes/spring-boot-data-couchbase.md)
- [appendix/auto-configuration-classes/spring-boot-data-elasticsearch](./appendix/auto-configuration-classes/spring-boot-data-elasticsearch.md)
- [appendix/auto-configuration-classes/spring-boot-data-jdbc](./appendix/auto-configuration-classes/spring-boot-data-jdbc.md)
- [appendix/auto-configuration-classes/spring-boot-data-jpa](./appendix/auto-configuration-classes/spring-boot-data-jpa.md)
- [appendix/auto-configuration-classes/spring-boot-data-ldap](./appendix/auto-configuration-classes/spring-boot-data-ldap.md)
- [appendix/auto-configuration-classes/spring-boot-data-mongodb](./appendix/auto-configuration-classes/spring-boot-data-mongodb.md)
- [appendix/auto-configuration-classes/spring-boot-data-neo4j](./appendix/auto-configuration-classes/spring-boot-data-neo4j.md)
- [appendix/auto-configuration-classes/spring-boot-data-r2dbc](./appendix/auto-configuration-classes/spring-boot-data-r2dbc.md)
- [appendix/auto-configuration-classes/spring-boot-data-redis](./appendix/auto-configuration-classes/spring-boot-data-redis.md)
- [appendix/auto-configuration-classes/spring-boot-data-rest](./appendix/auto-configuration-classes/spring-boot-data-rest.md)
- [appendix/auto-configuration-classes/spring-boot-devtools](./appendix/auto-configuration-classes/spring-boot-devtools.md)
- [appendix/auto-configuration-classes/spring-boot-elasticsearch](./appendix/auto-configuration-classes/spring-boot-elasticsearch.md)
- [appendix/auto-configuration-classes/spring-boot-flyway](./appendix/auto-configuration-classes/spring-boot-flyway.md)
- [appendix/auto-configuration-classes/spring-boot-freemarker](./appendix/auto-configuration-classes/spring-boot-freemarker.md)
- [appendix/auto-configuration-classes/spring-boot-graphql](./appendix/auto-configuration-classes/spring-boot-graphql.md)
- [appendix/auto-configuration-classes/spring-boot-groovy-templates](./appendix/auto-configuration-classes/spring-boot-groovy-templates.md)
- [appendix/auto-configuration-classes/spring-boot-gson](./appendix/auto-configuration-classes/spring-boot-gson.md)
- [appendix/auto-configuration-classes/spring-boot-h2console](./appendix/auto-configuration-classes/spring-boot-h2console.md)
- [appendix/auto-configuration-classes/spring-boot-hateoas](./appendix/auto-configuration-classes/spring-boot-hateoas.md)
- [appendix/auto-configuration-classes/spring-boot-hazelcast](./appendix/auto-configuration-classes/spring-boot-hazelcast.md)
- [appendix/auto-configuration-classes/spring-boot-health](./appendix/auto-configuration-classes/spring-boot-health.md)
- [appendix/auto-configuration-classes/spring-boot-hibernate](./appendix/auto-configuration-classes/spring-boot-hibernate.md)
- [appendix/auto-configuration-classes/spring-boot-http-client](./appendix/auto-configuration-classes/spring-boot-http-client.md)
- [appendix/auto-configuration-classes/spring-boot-http-codec](./appendix/auto-configuration-classes/spring-boot-http-codec.md)
- [appendix/auto-configuration-classes/spring-boot-http-converter](./appendix/auto-configuration-classes/spring-boot-http-converter.md)
- [appendix/auto-configuration-classes/spring-boot-integration](./appendix/auto-configuration-classes/spring-boot-integration.md)
- [appendix/auto-configuration-classes/spring-boot-jackson](./appendix/auto-configuration-classes/spring-boot-jackson.md)
- [appendix/auto-configuration-classes/spring-boot-jackson2](./appendix/auto-configuration-classes/spring-boot-jackson2.md)
- [appendix/auto-configuration-classes/spring-boot-jdbc](./appendix/auto-configuration-classes/spring-boot-jdbc.md)
- [appendix/auto-configuration-classes/spring-boot-jersey](./appendix/auto-configuration-classes/spring-boot-jersey.md)
- [appendix/auto-configuration-classes/spring-boot-jetty](./appendix/auto-configuration-classes/spring-boot-jetty.md)
- [appendix/auto-configuration-classes/spring-boot-jms](./appendix/auto-configuration-classes/spring-boot-jms.md)
- [appendix/auto-configuration-classes/spring-boot-jooq](./appendix/auto-configuration-classes/spring-boot-jooq.md)
- [appendix/auto-configuration-classes/spring-boot-jsonb](./appendix/auto-configuration-classes/spring-boot-jsonb.md)
- [appendix/auto-configuration-classes/spring-boot-kafka](./appendix/auto-configuration-classes/spring-boot-kafka.md)
- [appendix/auto-configuration-classes/spring-boot-kotlinx-serialization-json](./appendix/auto-configuration-classes/spring-boot-kotlinx-serialization-json.md)
- [appendix/auto-configuration-classes/spring-boot-ldap](./appendix/auto-configuration-classes/spring-boot-ldap.md)
- [appendix/auto-configuration-classes/spring-boot-liquibase](./appendix/auto-configuration-classes/spring-boot-liquibase.md)
- [appendix/auto-configuration-classes/spring-boot-mail](./appendix/auto-configuration-classes/spring-boot-mail.md)
- [appendix/auto-configuration-classes/spring-boot-micrometer-metrics](./appendix/auto-configuration-classes/spring-boot-micrometer-metrics.md)
- [appendix/auto-configuration-classes/spring-boot-micrometer-observation](./appendix/auto-configuration-classes/spring-boot-micrometer-observation.md)
- [appendix/auto-configuration-classes/spring-boot-micrometer-tracing-brave](./appendix/auto-configuration-classes/spring-boot-micrometer-tracing-brave.md)
- [appendix/auto-configuration-classes/spring-boot-micrometer-tracing-opentelemetry](./appendix/auto-configuration-classes/spring-boot-micrometer-tracing-opentelemetry.md)
- [appendix/auto-configuration-classes/spring-boot-micrometer-tracing](./appendix/auto-configuration-classes/spring-boot-micrometer-tracing.md)
- [appendix/auto-configuration-classes/spring-boot-mongodb](./appendix/auto-configuration-classes/spring-boot-mongodb.md)
- [appendix/auto-configuration-classes/spring-boot-mustache](./appendix/auto-configuration-classes/spring-boot-mustache.md)
- [appendix/auto-configuration-classes/spring-boot-neo4j](./appendix/auto-configuration-classes/spring-boot-neo4j.md)
- [appendix/auto-configuration-classes/spring-boot-netty](./appendix/auto-configuration-classes/spring-boot-netty.md)
- [appendix/auto-configuration-classes/spring-boot-opentelemetry](./appendix/auto-configuration-classes/spring-boot-opentelemetry.md)
- [appendix/auto-configuration-classes/spring-boot-persistence](./appendix/auto-configuration-classes/spring-boot-persistence.md)
- [appendix/auto-configuration-classes/spring-boot-pulsar](./appendix/auto-configuration-classes/spring-boot-pulsar.md)
- [appendix/auto-configuration-classes/spring-boot-quartz](./appendix/auto-configuration-classes/spring-boot-quartz.md)
- [appendix/auto-configuration-classes/spring-boot-r2dbc](./appendix/auto-configuration-classes/spring-boot-r2dbc.md)
- [appendix/auto-configuration-classes/spring-boot-reactor-netty](./appendix/auto-configuration-classes/spring-boot-reactor-netty.md)
- [appendix/auto-configuration-classes/spring-boot-reactor](./appendix/auto-configuration-classes/spring-boot-reactor.md)
- [appendix/auto-configuration-classes/spring-boot-restclient](./appendix/auto-configuration-classes/spring-boot-restclient.md)
- [appendix/auto-configuration-classes/spring-boot-resttestclient](./appendix/auto-configuration-classes/spring-boot-resttestclient.md)
- [appendix/auto-configuration-classes/spring-boot-rsocket](./appendix/auto-configuration-classes/spring-boot-rsocket.md)
- [appendix/auto-configuration-classes/spring-boot-security-oauth2-authorization-server](./appendix/auto-configuration-classes/spring-boot-security-oauth2-authorization-server.md)
- [appendix/auto-configuration-classes/spring-boot-security-oauth2-client](./appendix/auto-configuration-classes/spring-boot-security-oauth2-client.md)
- [appendix/auto-configuration-classes/spring-boot-security-oauth2-resource-server](./appendix/auto-configuration-classes/spring-boot-security-oauth2-resource-server.md)
- [appendix/auto-configuration-classes/spring-boot-security-saml2](./appendix/auto-configuration-classes/spring-boot-security-saml2.md)
- [appendix/auto-configuration-classes/spring-boot-security](./appendix/auto-configuration-classes/spring-boot-security.md)
- [appendix/auto-configuration-classes/spring-boot-sendgrid](./appendix/auto-configuration-classes/spring-boot-sendgrid.md)
- [appendix/auto-configuration-classes/spring-boot-servlet](./appendix/auto-configuration-classes/spring-boot-servlet.md)
- [appendix/auto-configuration-classes/spring-boot-session-data-redis](./appendix/auto-configuration-classes/spring-boot-session-data-redis.md)
- [appendix/auto-configuration-classes/spring-boot-session-jdbc](./appendix/auto-configuration-classes/spring-boot-session-jdbc.md)
- [appendix/auto-configuration-classes/spring-boot-session](./appendix/auto-configuration-classes/spring-boot-session.md)
- [appendix/auto-configuration-classes/spring-boot-testcontainers](./appendix/auto-configuration-classes/spring-boot-testcontainers.md)
- [appendix/auto-configuration-classes/spring-boot-thymeleaf](./appendix/auto-configuration-classes/spring-boot-thymeleaf.md)
- [appendix/auto-configuration-classes/spring-boot-tomcat](./appendix/auto-configuration-classes/spring-boot-tomcat.md)
- [appendix/auto-configuration-classes/spring-boot-transaction](./appendix/auto-configuration-classes/spring-boot-transaction.md)
- [appendix/auto-configuration-classes/spring-boot-validation](./appendix/auto-configuration-classes/spring-boot-validation.md)
- [appendix/auto-configuration-classes/spring-boot-webclient](./appendix/auto-configuration-classes/spring-boot-webclient.md)
- [appendix/auto-configuration-classes/spring-boot-webflux](./appendix/auto-configuration-classes/spring-boot-webflux.md)
- [appendix/auto-configuration-classes/spring-boot-webmvc](./appendix/auto-configuration-classes/spring-boot-webmvc.md)
- [appendix/auto-configuration-classes/spring-boot-webservices](./appendix/auto-configuration-classes/spring-boot-webservices.md)
- [appendix/auto-configuration-classes/spring-boot-websocket](./appendix/auto-configuration-classes/spring-boot-websocket.md)
- [appendix/auto-configuration-classes/spring-boot-zipkin](./appendix/auto-configuration-classes/spring-boot-zipkin.md)
- [appendix/dependency-versions/coordinates](./appendix/dependency-versions/coordinates.md)
- [appendix/dependency-versions/index](./appendix/dependency-versions/index.md)
- [appendix/dependency-versions/properties](./appendix/dependency-versions/properties.md)
- [appendix/deprecated-application-properties/index](./appendix/deprecated-application-properties/index.md)
- [appendix/test-auto-configuration/index](./appendix/test-auto-configuration/index.md)
- [appendix/test-auto-configuration/slices](./appendix/test-auto-configuration/slices.md)
- [build-tool-plugin/antlib](./build-tool-plugin/antlib.md)
- [build-tool-plugin/index](./build-tool-plugin/index.md)
- [build-tool-plugin/other-build-systems](./build-tool-plugin/other-build-systems.md)
- [cli/index](./cli/index.md)
- [cli/installation](./cli/installation.md)
- [cli/using-the-cli](./cli/using-the-cli.md)
- [community](./community.md)
- [documentation](./documentation.md)
- [how-to/actuator](./how-to/actuator.md)
- [how-to/aot-cache](./how-to/aot-cache.md)
- [how-to/aot](./how-to/aot.md)
- [how-to/application](./how-to/application.md)
- [how-to/batch](./how-to/batch.md)
- [how-to/build](./how-to/build.md)
- [how-to/data-access](./how-to/data-access.md)
- [how-to/data-initialization](./how-to/data-initialization.md)
- [how-to/deployment/cloud](./how-to/deployment/cloud.md)
- [how-to/deployment/index](./how-to/deployment/index.md)
- [how-to/deployment/installing](./how-to/deployment/installing.md)
- [how-to/deployment/traditional-deployment](./how-to/deployment/traditional-deployment.md)
- [how-to/docker-compose](./how-to/docker-compose.md)
- [how-to/hotswapping](./how-to/hotswapping.md)
- [how-to/http-clients](./how-to/http-clients.md)
- [how-to/index](./how-to/index.md)
- [how-to/jersey](./how-to/jersey.md)
- [how-to/logging](./how-to/logging.md)
- [how-to/messaging](./how-to/messaging.md)
- [how-to/native-image/developing-your-first-application](./how-to/native-image/developing-your-first-application.md)
- [how-to/native-image/index](./how-to/native-image/index.md)
- [how-to/native-image/testing-native-applications](./how-to/native-image/testing-native-applications.md)
- [how-to/nosql](./how-to/nosql.md)
- [how-to/properties-and-configuration](./how-to/properties-and-configuration.md)
- [how-to/security](./how-to/security.md)
- [how-to/spring-mvc](./how-to/spring-mvc.md)
- [how-to/testing](./how-to/testing.md)
- [how-to/webserver](./how-to/webserver.md)
- [index](./index.md)
- [installing](./installing.md)
- [redirect](./redirect.md)
- [reference/actuator/auditing](./reference/actuator/auditing.md)
- [reference/actuator/cloud-foundry](./reference/actuator/cloud-foundry.md)
- [reference/actuator/enabling](./reference/actuator/enabling.md)
- [reference/actuator/endpoints](./reference/actuator/endpoints.md)
- [reference/actuator/http-exchanges](./reference/actuator/http-exchanges.md)
- [reference/actuator/index](./reference/actuator/index.md)
- [reference/actuator/jmx](./reference/actuator/jmx.md)
- [reference/actuator/loggers](./reference/actuator/loggers.md)
- [reference/actuator/metrics](./reference/actuator/metrics.md)
- [reference/actuator/monitoring](./reference/actuator/monitoring.md)
- [reference/actuator/observability](./reference/actuator/observability.md)
- [reference/actuator/process-monitoring](./reference/actuator/process-monitoring.md)
- [reference/actuator/tracing](./reference/actuator/tracing.md)
- [reference/data/index](./reference/data/index.md)
- [reference/data/nosql](./reference/data/nosql.md)
- [reference/data/sql](./reference/data/sql.md)
- [reference/features/aop](./reference/features/aop.md)
- [reference/features/dev-services](./reference/features/dev-services.md)
- [reference/features/developing-auto-configuration](./reference/features/developing-auto-configuration.md)
- [reference/features/external-config](./reference/features/external-config.md)
- [reference/features/index](./reference/features/index.md)
- [reference/features/internationalization](./reference/features/internationalization.md)
- [reference/features/json](./reference/features/json.md)
- [reference/features/kotlin](./reference/features/kotlin.md)
- [reference/features/logging](./reference/features/logging.md)
- [reference/features/profiles](./reference/features/profiles.md)
- [reference/features/spring-application](./reference/features/spring-application.md)
- [reference/features/ssl](./reference/features/ssl.md)
- [reference/features/task-execution-and-scheduling](./reference/features/task-execution-and-scheduling.md)
- [reference/index](./reference/index.md)
- [reference/io/caching](./reference/io/caching.md)
- [reference/io/email](./reference/io/email.md)
- [reference/io/hazelcast](./reference/io/hazelcast.md)
- [reference/io/index](./reference/io/index.md)
- [reference/io/jta](./reference/io/jta.md)
- [reference/io/quartz](./reference/io/quartz.md)
- [reference/io/rest-client](./reference/io/rest-client.md)
- [reference/io/spring-batch](./reference/io/spring-batch.md)
- [reference/io/validation](./reference/io/validation.md)
- [reference/io/webservices](./reference/io/webservices.md)
- [reference/messaging/amqp](./reference/messaging/amqp.md)
- [reference/messaging/index](./reference/messaging/index.md)
- [reference/messaging/jms](./reference/messaging/jms.md)
- [reference/messaging/kafka](./reference/messaging/kafka.md)
- [reference/messaging/pulsar](./reference/messaging/pulsar.md)
- [reference/messaging/rsocket](./reference/messaging/rsocket.md)
- [reference/messaging/spring-integration](./reference/messaging/spring-integration.md)
- [reference/messaging/websockets](./reference/messaging/websockets.md)
- [reference/packaging/aot-cache](./reference/packaging/aot-cache.md)
- [reference/packaging/aot](./reference/packaging/aot.md)
- [reference/packaging/checkpoint-restore](./reference/packaging/checkpoint-restore.md)
- [reference/packaging/container-images/cloud-native-buildpacks](./reference/packaging/container-images/cloud-native-buildpacks.md)
- [reference/packaging/container-images/dockerfiles](./reference/packaging/container-images/dockerfiles.md)
- [reference/packaging/container-images/efficient-images](./reference/packaging/container-images/efficient-images.md)
- [reference/packaging/container-images/index](./reference/packaging/container-images/index.md)
- [reference/packaging/efficient](./reference/packaging/efficient.md)
- [reference/packaging/index](./reference/packaging/index.md)
- [reference/packaging/native-image/advanced-topics](./reference/packaging/native-image/advanced-topics.md)
- [reference/packaging/native-image/index](./reference/packaging/native-image/index.md)
- [reference/packaging/native-image/introducing-graalvm-native-images](./reference/packaging/native-image/introducing-graalvm-native-images.md)
- [reference/testing/index](./reference/testing/index.md)
- [reference/testing/spring-applications](./reference/testing/spring-applications.md)
- [reference/testing/spring-boot-applications](./reference/testing/spring-boot-applications.md)
- [reference/testing/test-modules](./reference/testing/test-modules.md)
- [reference/testing/test-scope-dependencies](./reference/testing/test-scope-dependencies.md)
- [reference/testing/test-utilities](./reference/testing/test-utilities.md)
- [reference/testing/testcontainers](./reference/testing/testcontainers.md)
- [reference/using/auto-configuration](./reference/using/auto-configuration.md)
- [reference/using/build-systems](./reference/using/build-systems.md)
- [reference/using/configuration-classes](./reference/using/configuration-classes.md)
- [reference/using/devtools](./reference/using/devtools.md)
- [reference/using/index](./reference/using/index.md)
- [reference/using/packaging-for-production](./reference/using/packaging-for-production.md)
- [reference/using/running-your-application](./reference/using/running-your-application.md)
- [reference/using/spring-beans-and-dependency-injection](./reference/using/spring-beans-and-dependency-injection.md)
- [reference/using/structuring-your-code](./reference/using/structuring-your-code.md)
- [reference/using/using-the-springbootapplication-annotation](./reference/using/using-the-springbootapplication-annotation.md)
- [reference/web/graceful-shutdown](./reference/web/graceful-shutdown.md)
- [reference/web/index](./reference/web/index.md)
- [reference/web/reactive](./reference/web/reactive.md)
- [reference/web/servlet](./reference/web/servlet.md)
- [reference/web/spring-graphql](./reference/web/spring-graphql.md)
- [reference/web/spring-hateoas](./reference/web/spring-hateoas.md)
- [reference/web/spring-security](./reference/web/spring-security.md)
- [reference/web/spring-session](./reference/web/spring-session.md)
- [specification/configuration-metadata/annotation-processor](./specification/configuration-metadata/annotation-processor.md)
- [specification/configuration-metadata/format](./specification/configuration-metadata/format.md)
- [specification/configuration-metadata/index](./specification/configuration-metadata/index.md)
- [specification/configuration-metadata/manual-hints](./specification/configuration-metadata/manual-hints.md)
- [specification/executable-jar/alternatives](./specification/executable-jar/alternatives.md)
- [specification/executable-jar/index](./specification/executable-jar/index.md)
- [specification/executable-jar/jarfile-class](./specification/executable-jar/jarfile-class.md)
- [specification/executable-jar/launching](./specification/executable-jar/launching.md)
- [specification/executable-jar/nested-jars](./specification/executable-jar/nested-jars.md)
- [specification/executable-jar/property-launcher](./specification/executable-jar/property-launcher.md)
- [specification/executable-jar/restrictions](./specification/executable-jar/restrictions.md)
- [system-requirements](./system-requirements.md)
- [tutorial/first-application/index](./tutorial/first-application/index.md)
- [tutorial/index](./tutorial/index.md)
- [upgrading](./upgrading.md)
